@@ -1,3 +1,6 @@
-# scmp-cache-trace
+# kunlun-basedata-service
 
-scmp项目平台服务调用链追踪与数据缓存
+昆仑管理系统——基础数据（服务调用链追踪与数据缓存）
+
+# 启动JVM参数
+-Xms50m -Xmx50m -Xss512k -XX:+UseConcMarkSweepGC
